# inspect

./: .env.example  .gitignore  .gitmodules  .swiftlint.yml  AGENTS.md  AppStore_in.fourplex.Inspect.mobileprovision  CONTRIBUTING.md  Cartfile  Cartfile.resolved  Constants.swift  DEVELOPMENT.md  Inspect-Bridging-Header.h  LICENSE  Podfile  R.generated.swift  README.markdown  README.md  String+Utils.swift  UIColor+Hex.swift  icon.sketch  justfile  plan.md  project.local.yml.example  project.yml
Certificate/: ActionViewController+Utils.swift  ActionViewController.swift  CertificateCells.swift  ExportItemSource.swift  Info.plist  PurchaseHelper.swift
Configs/: LocalOverrides.xcconfig.example  Project.xcconfig
Dependencies/: JHProgressHUD.swift
Inspect/: AppDelegate.swift  Cartfile  Cartfile.resolved  DonationViewController.swift  Feedbackable.swift  HistoryStore.swift  HistoryViewController.swift  HomeCell.swift  HomeSection.swift  HomeViewController.swift  Info.plist  Inspect-Bridging-Header.h  SSLLabs.swift  SettingStore.swift  TutorialPageViewController.swift  TutorialViewController.swift  UINavigationController+Extension.swift  UINavigationController+Transparent.swift  ViewController.swift  (+1 more)
Inspect.xcodeproj/: project.pbxproj
Rust/tunnel-core/: Cargo.toml  README.md
Rust/tunnel-core/fixtures/replay/: sample_cert_chain.json  sample_fragmented_handshake.json  sample_sni.json
Rust/tunnel-core/include/: tunnel_core.h
Rust/tunnel-core/src/: core.rs  flow.rs  lib.rs  live.rs  logging.rs  model.rs  packet.rs  pcap.rs  tun2proxy_live.rs  tun2proxy_observer.rs
(+254 files in other folders)
