[package]
name = "tunnel-core"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
hex = "0.4.3"
libc = "0.2.176"
log = "0.4.28"
once_cell = "1.21.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1", features = ["full"] }
tun2proxy = { path = "../../../tun2proxy" }

[dev-dependencies]
tempfile = "3.23.0"
